move things to source

--- a/src/quick-search/index.html
+++ b/src/quick-search/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Saladict</title>
     <script src="./static/browser-polyfill.min.js"></script>
+    <script src="background.js"></script>
   </head>
   <body>
     <div id="frame-root"></div>
