--- a/src/quick-search/index.html
+++ b/src/quick-search/index.html
@@ -6,7 +6,15 @@
     <title>Saladict</title>
     <script src="./static/browser-polyfill.min.js"></script>
     <script src="background.js"></script>
-  </head>
+    <style>
+      .panel-MenuBar_SearchBox {
+        flex-grow: 99 !important;
+      }
+    </style>
+    <script>
+      browser.closeStyle()
+    </script>
+    </head>
   <body>
     <div id="frame-root"></div>
     <!-- built files will be auto injected -->
