--- a/src/quick-search/index.html
+++ b/src/quick-search/index.html
@@ -7,6 +7,28 @@
     <script src="./static/browser-polyfill.min.js"></script>
     <script src="background.js"></script>
     <style>
+      .saladict-WordEditor {
+        position: fixed !important;
+        z-index: 2147483645 !important;
+        top: 0 !important;
+        left: 0 !important;
+        width: 100vw !important;
+        height: 100vh !important;
+        overflow: hidden !important; }
+      .saladict-WordEditor-enter {
+        will-change: opacity;
+        opacity: 0 !important; }
+      .saladict-WordEditor-enter-active {
+        opacity: 1 !important; }
+      .saladict-WordEditor-exit {
+        will-change: opacity;
+        opacity: 1 !important; }
+      .saladict-WordEditor-exit-active {
+        opacity: 0 !important; }
+      .isAnimate.saladict-WordEditor {
+        transition: opacity 0.5s !important; }
+    </style>
+    <style>
       .panel-MenuBar_SearchBox {
         flex-grow: 99 !important;
       }
